fixes sign_in page on mobile so there is no left or right scroll

--- a/app/assets/stylesheets/smartadmin-production.scss
+++ b/app/assets/stylesheets/smartadmin-production.scss
@@ -12180,6 +12180,7 @@ input[type="color"].ui-autocomplete-loading {
   top: 0px;
   right: -5px;
   line-height: 20px;
+  padding-right: 10px;
 }
 .alert-heading {
   font-weight: 600;
